<resources>
    <string name="app_name">Home_ponto</string>
    <string name="digite_sua_matricula_fragment_registration">Digite sua matrícula</string>
    <string name="matricula_teste_edit_fragment_registration">11994</string>
    <string name="e_atraves_da_sua_matricula_que">É através de sua matricula que vamos identificar você durante essa nossa parceria. Ela é o seu registro único, então lembre-se de inseri-la corretamente!</string>
    <string name="bem_vindo">Bem vindo</string>
    <string name="aqui_priorizamos_o_seu_tempo">Aqui priorizamos o seu tempo! Apenas com a digital você registra seu ponto sem a necessidade de separar um tempo para faze-lo manualmente.</string>
    <string name="objetivo">Objetivo</string>
    <string name="name_test_f_collect_data">Marco Aurélio José Francisco</string>
    <string name="matricula_hint">Matrícula</string>
    <string name="nome_colaborador_hint">Nome</string>
    <string name="vamos_comecar">Vamos começar?</string>
    <string name="coletar_de_dados">Coletar os dados</string>
    <string name="empresa">Empresa</string>
    <string name="sobre_voce">Sobre o \ncolaborador</string>
    <string name="agora_que_voc_conhe_e_um_pouco_do_app">Agora que você conheçe um pouco do app, é hora de dar inicio a nossa jornada de trabalho!</string>
    <string name="iniciar">Iniciar</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="ou_se_registre_com">Ou registre-se com</string>
    <string name="ou_faca_login_com">Ou faça login com</string>
    <string name="faca_login">Faça login</string>
    <string name="nao_possui_conta">Não possui conta?</string>
    <string name="registre_se">Registre-se</string>
    <string name="faca_login_com_sua_conta">Faça login \ncom sua conta</string>
    <string name="registrar_ponto">Registrar ponto</string>
    <string name="_20_fevereiro">20 Fevereiro</string>
    <string name="estatisticas">ESTATÍSTICAS</string>
    <string name="acompanhamento_grafico">GRÁFICO MENSAL</string>
    <string name="o_ultimo_registro">O último registro ocorreu as: 08:00</string>
    <string name="fujioka_eletro_imagem_sa">FUJIOKA ELETRO IMAGEM SA</string>
    <string name="configuracoes">Configurações</string>
    <string name="sair_do_app">Sair do app</string>
    <string name="sobre">Sobre</string>
    <string name="deseja_sair_do_aplicativo">Deseja sair do aplicativo?\n(Toque no vazio para cancelar)</string>
    <string name="sim">Sim</string>
</resources>